Changed the zoom level on the bubbles Changed zoom button styles Alignement of the text legend fixed

--- a/src/app/geochart/geochart.component.css
+++ b/src/app/geochart/geochart.component.css
@@ -1,17 +1,17 @@
 .background {
-  fill: none;
-  pointer-events: all;
+    fill: none;
+    pointer-events: all;
 }
 
 .feature {
-  fill: #bebebe !important;
-  stroke: #fff !important;
-  stroke-width: 2px !important;
-  cursor: pointer !important;
+    fill: #bebebe !important;
+    stroke: #fff !important;
+    stroke-width: 2px !important;
+    cursor: pointer !important;
 }
 
 .feature.active {
-  fill: gray;
+    fill: gray;
 }
 
 .mesh {
@@ -21,7 +21,7 @@
     stroke-linejoin: round;
 }
 
-div.geotooltips {   
+div.geotooltips {
     position: absolute;
     padding: 2px;
     font: 12px sans-serif;
@@ -33,14 +33,14 @@ div.geotooltips {
     min-height: 100px;
 }
 
-.geoDataToolTip{
+.geoDataToolTip {
     margin: 2px;
     padding: 1px;
     font-size: 12px;
     line-height: 18px;
 }
 
-.geoDataToolTipItem{
+.geoDataToolTipItem {
     list-style-type: none;
 }
 
@@ -49,57 +49,76 @@ div.geotooltips {
         transform: scale(1);
         -webkit-transform: scale(1)
     }
-    30%{
-        transform: scale(1.1);opacity:0.65;
-        -webkit-transform: scale(1.1);opacty: 0.65;
+    30% {
+        transform: scale(1.1);
+        opacity: 0.65;
+        -webkit-transform: scale(1.1);
+        opacty: 0.65;
     }
-    70%{
-        transform: scale(1.2);opacity:0.3;
-        -webkit-transform: scale(1.2);opacity: 0.3;
+    70% {
+        transform: scale(1.2);
+        opacity: 0.3;
+        -webkit-transform: scale(1.2);
+        opacity: 0.3;
     }
-    100%{
-        transform: scale(1.3);opacity: 0;
-        -webkit-transform: scale(1.3); opacity:0;
+    100% {
+        transform: scale(1.3);
+        opacity: 0;
+        -webkit-transform: scale(1.3);
+        opacity: 0;
     }
 }
+
 @keyframes hvr-pulse {
     0% {
         transform: scale(1);
         -webkit-transform: scale(1)
     }
-    30%{
-        transform: scale(1.1);opacity:0.65;
-        -webkit-transform: scale(1.1);opacty: 0.65;
+    30% {
+        transform: scale(1.1);
+        opacity: 0.65;
+        -webkit-transform: scale(1.1);
+        opacty: 0.65;
     }
-    70%{
-        transform: scale(1.2);opacity:0.3;
-        -webkit-transform: scale(1.2);opacity: 0.3;
+    70% {
+        transform: scale(1.2);
+        opacity: 0.3;
+        -webkit-transform: scale(1.2);
+        opacity: 0.3;
     }
-    100%{
-        transform: scale(1.3);opacity: 0;
-        -webkit-transform: scale(1.3); opacity:0;
+    100% {
+        transform: scale(1.3);
+        opacity: 0;
+        -webkit-transform: scale(1.3);
+        opacity: 0;
     }
 }
+
 .hvr-pulse {
     display: inline-block;
     vertical-align: middle;
     box-shadow: 0 0 1px transparent;
-    -ms-transform-origin: 50% 50%; /* IE 9 */
-    -webkit-transform-origin: 50% 50%; /* Chrome, Safari, Opera */
+    -ms-transform-origin: 50% 50%;
+    /* IE 9 */
+    -webkit-transform-origin: 50% 50%;
+    /* Chrome, Safari, Opera */
     transform-origin: 50% 50%;
 }
-.hvr-pulse:hover, .hvr-pulse:focus, .hvr-pulse:active {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -webkit-animation-name: hvr-big;
-  animation-name: hvr-big;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-  cursor: pointer;
+
+.hvr-pulse:hover,
+.hvr-pulse:focus,
+.hvr-pulse:active {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -webkit-animation-name: hvr-big;
+    animation-name: hvr-big;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    cursor: pointer;
 }
 
 @-webkit-keyframes hvr-big {
@@ -107,57 +126,60 @@ div.geotooltips {
         transform: scale(1);
         -webkit-transform: scale(1)
     }
-    100%{
+    100% {
         transform: scale(1.2);
         -webkit-transform: scale(1.2);
     }
 }
+
 @keyframes hvr-big {
     0% {
         transform: scale(1);
         -webkit-transform: scale(1)
     }
-    100%{
+    100% {
         transform: scale(1.2);
         -webkit-transform: scale(1.2);
     }
 }
 
 .newItem {
-  -webkit-animation-name: hvr-pulse;
-  animation-name: hvr-pulse;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 3;
-  animation-iteration-count: 3;
-  cursor: pointer;
+    -webkit-animation-name: hvr-pulse;
+    animation-name: hvr-pulse;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: 3;
+    animation-iteration-count: 3;
+    cursor: pointer;
 }
 
-.newItem:hover, .newItem:focus, .newItem:active {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -webkit-animation-name: hvr-big;
-  animation-name: hvr-big;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-  cursor: pointer;
+.newItem:hover,
+.newItem:focus,
+.newItem:active {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -webkit-animation-name: hvr-big;
+    animation-name: hvr-big;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    cursor: pointer;
 }
 
 .zoom-in-button {
-  fill: #bfbfbf;
-  stroke: #0a0a0a;
-  stroke-width: 2px;
-  cursor: pointer;
+    fill: #bfbfbf;
+    stroke: #0a0a0a;
+    stroke-width: 2px;
+    cursor: pointer;
 }
 
 .zoom-in-text {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .bubble {
@@ -202,25 +224,26 @@ div.geotooltips {
     0% {
         opacity: 0;
     }
-    100%{
-        opacity: 1;
-    }
-}
-@keyframes legend-appear {
-    0% {
-        opacity: 0;
-    }
-    100%{
+    100% {
         opacity: 1;
     }
 }
 
-.button{
+@keyframes legend-appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.button {
     fill: #ffffff;
-    stroke:#333;
+    stroke: #ccc;
     position: relative;
     z-index: 5000;
     top: -10px;
     cursor: pointer;
-    color: #333;
+    color: #ccc;
 }
